// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CheckboxItem /> help renders 1`] = `
<div>
  <input
    aria-labelledby="form-0_mock_6--label"
    id="form-0_mock_6"
    type="checkbox"
    value="100"
  />
  <label
    for="form-0_mock_6"
    id="form-0_mock_6--label"
  >
    Example
    <span>
      Help
    </span>
  </label>
</div>
`;

exports[`<CheckboxItem /> label renders 1`] = `
<div>
  <input
    aria-labelledby="form-0_mock_3--label"
    id="form-0_mock_3"
    type="checkbox"
    value="100"
  />
  <label
    for="form-0_mock_3"
    id="form-0_mock_3--label"
  >
    Label
  </label>
</div>
`;

exports[`<CheckboxItem /> renders 1`] = `
<div>
  <input
    aria-labelledby="form-0_mock_0--label"
    id="form-0_mock_0"
    type="checkbox"
    value="100"
  />
  <label
    for="form-0_mock_0"
    id="form-0_mock_0--label"
  >
    Example
  </label>
</div>
`;
